# word-to-typst

./: .gitignore  LICENSE  README.md  pyproject.toml
src/word_to_typst/: cli.py  converter.py
tests/: test_cli.py  test_converter.py  test_integration.py
