[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "word-to-typst"
version = "0.1.0"
description = "Convert .doc and .docx files to Typst using pandoc"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = ["click>=8.0"]

[project.scripts]
word-to-typst = "word_to_typst.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/word_to_typst"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["integration: requires podman and network access"]

[dependency-groups]
dev = ["pytest>=8.0"]
